# example-project

./: .gitignore  BUILD.bazel  Dockerfile  Jenkinsfile  WORKSPACE  app.js  docker-compose.yml  jasmine.json  package.json
src/: BUILD.bazel  helloWorld.test.ts  helloWorld.ts  index.ts
